--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ h6 {
 .header {
   background-image: url(./img/background.png);
   height: 823px;
+  background-repeat: no-repeat;
 }
 .container {
   max-width: 987px;
@@ -97,6 +98,7 @@ h6 {
   background-image: url(./cover.png);
   width: 1440 px;
   height: 821px;
+  background-repeat: no-repeat;
 }
 
 .h2 {
@@ -131,24 +133,30 @@ h6 {
   margin-top: -15px;
 }
 
-.col-6 {
-  flex-basis: 50%;
-  flex-grow: 0;
-  flex-shrink: 0;
-}
-.card {
-  box-shadow: 3px 3px 10px black;
-  background-color: rgb(126, 225, 238);
-  margin-bottom: 10px;
+.card{
+  border-radius: 10px;
+  border: 1px solid black;
   width: 328px;
+  margin: 2rem;
   height: 385px;
-  border-radius: 10%;
+  
 
+  background-color: white ;
 }
-
-.row{
+.container-card{
   display: flex;
-  width: 328px;
-  height: 385px;
-  border-radius: 10%;
+  color:  #737373;
+  margin: 2rem;
+}
+.container-card section{
+  background-color: white;
+}
+.card img,h5{
+  font-size: 16px;
+  line-height: 24px;
+  
+}
+.container-card .card div{
+  background-color: #F6E4D7;
+  border-radius: 10px;
 }
