--- a/style.css
+++ b/style.css
@@ -133,30 +133,56 @@ h6 {
   margin-top: -15px;
 }
 
-.card{
+.card {
   border-radius: 10px;
   border: 1px solid black;
   width: 328px;
   margin: 2rem;
   height: 385px;
-  
 
-  background-color: white ;
-}
-.container-card{
-  display: flex;
-  color:  #737373;
-  margin: 2rem;
-}
-.container-card section{
   background-color: white;
 }
-.card img,h5{
+.container-card {
+  display: flex;
+  color: #737373;
+  margin: 2rem;
+}
+.container-card section {
+  background-color: white;
+}
+.card img {
+  height: 72px;
+  width: 72px;
+  left: 50px;
+  top: 30px;
+  border-radius: 200px;
+}
+.card h5 {
+  height: 24px;
+  width: 145px;
+  left: 0px;
+  top: 0px;
+  border-radius: nullpx;
   font-size: 16px;
   line-height: 24px;
-  
+  text-align: justify;
 }
-.container-card .card div{
-  background-color: #F6E4D7;
+.container-card .card div {
+  background-color: #f6e4d7;
   border-radius: 10px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  
+  left: 0px;
+  top: 0px;
+ 
+}
+section{
+  height: 253px;
+width: 328px;
+top: 132px;
+border-radius: 11px;
+padding: 30px 50px 30px 50px;
+
 }
