--- a/style.css
+++ b/style.css
@@ -173,6 +173,10 @@ h6 {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  flex-direction: column;
+  padding: 0px;
+  width: 328px;
+  height: 385px;
   
   left: 0px;
   top: 0px;
@@ -184,5 +188,3 @@ width: 328px;
 top: 132px;
 border-radius: 11px;
 padding: 30px 50px 30px 50px;
-
-}
