--- a/style.css
+++ b/style.css
@@ -237,3 +237,6 @@ section {
 .container-card-who .card-who div h6 {
   color: #737373;
 }
+.container-card-who .card-who div h5{
+  color: black;
+}
