--- a/style.css
+++ b/style.css
@@ -96,9 +96,16 @@ h6 {
 }
 .cover {
   background-image: url(./cover.png);
-  width: 1440 px;
+  width: 1440px;
   height: 821px;
   background-repeat: no-repeat;
+
+  
+}
+
+.cover h5 {
+text-align: justify;
+
 }
 
 .h2 {
@@ -241,4 +248,22 @@ section {
 }
 .container-card-who .card-who div h5{
   color: black;
+}
+.foterdiv button{
+   display:  flex;
+   flex-direction: column;
+   align-items: center;
+   padding: 15px 40px;
+   gap: 10px;
+   width: 158px;
+   height: 58px;
+    background-color: #D0A144;
+    border-radius: 5px;
+    margin-left: 1048px;
+    border-color: #D0A144;
+}
+.foterdiv h3{
+   color:  #252B42;
+  line-height: 32px;
+  text-align: left;
 }
