--- a/style.css
+++ b/style.css
@@ -266,4 +266,22 @@ section {
    color:  #252B42;
   line-height: 32px;
   text-align: left;
+  margin-left: 195px;
+
+
+}
+.foterdiv p{
+  margin-left: 195px;
+  
+}
+.foterr{
+  background:linear-gradient(270deg, #295C7A -1.04%, #0072B5 100%); 
+ position:  absolute;
+
+
+}
+footer {
+  display: inline-block;
+  
+
 }
